tests/fixtures/errors/invalid_includeurl_url.puml
@startuml
!includeurl https://example.com/root.puml
@enduml
